--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "angular-utils-pagination": "^0.11.1",
     "gm": "^1.22.0",
     "ionic-sdk": "^1.2.4",
-    "meteor-node-stubs": "~0.2.0",
+    "meteor-node-stubs": "^0.2.3",
     "ng-file-upload": "^12.0.4",
     "ng-img-crop": "^0.2.0",
     "underscore": "^1.8.3"
